fix: restore Shield pairing and address SonarCloud backlog